# koth

./: .clangd  .gitignore  README.md  build.sh  clean.sh  compile_commands_shared.json
docs/: assumptions.md  requirements.md  system_design.html  system_design.md
docs/research/: market_data_order_book_research.md  order_book_manager.md
docs/research/lock_free_programming/: multithreading review.md  preshing's intro to lock free.md
scripts/: analyze_dependencies.sh  create_service.sh
services/: CMakeLists.txt
services/main_trading_engine/: CMakeLists.txt
services/main_trading_engine/include/: order_book.h
services/main_trading_engine/include/main_trading_engine/: order.h  order_book.h  trade.h
services/main_trading_engine/src/: order_book.cpp
services/market_data_pipeline/: CMakeLists.txt
services/market_data_pipeline/include/market_data_pipeline/: market_data_order_book.h
services/market_data_pipeline/src/: market_data_order_book.cpp
services/market_data_pipeline/tests/: test_market_data_order_book.cpp
shared_libraries/: CMakeLists.txt
shared_libraries/common_types/: CMakeLists.txt
shared_libraries/common_types/include/common_types/: constants.h  enums.h  error_codes.h  market_data.h  market_data_types.h  order.h  trade.h  type_aliases.h
shared_libraries/common_types/tests/: compile_test.cpp
shared_libraries/common_utilities/: CMakeLists.txt
shared_libraries/common_utilities/include/common_utilities/: time_utils.h
shared_libraries/common_utilities/src/: time_utils.cpp
shared_libraries/memory_pool/: CMakeLists.txt
shared_libraries/memory_pool/include/memory_pool/: memory_pool.h  order_pool.h  trade_pool.h
shared_libraries/memory_pool/src/: memory_pool.cpp
shared_libraries/spsc_ring_buffer/include/spsc_ring_buffer/: spsc_ring_buffer.h
shared_libraries/spsc_ring_buffer/src/: spsc_ring_buffer.cpp
shared_libraries/symbol_table/: CMakeLists.txt
shared_libraries/symbol_table/include/symbol_table/: symbol_table.h
shared_libraries/symbol_table/src/: symbol_table.cpp
shared_libraries/symbol_table/tests/: test_symbol_table.cpp
shared_libraries/trade_history/: CMakeLists.txt
shared_libraries/trade_history/include/trade_history/: trade_history.h
shared_libraries/trade_history/src/: trade_history.cpp
